# rust-ssg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: build.rs  build_dir.rs  build_file.rs  cli.rs  copy_static.rs  dev.rs  init.rs  main.rs  print.rs
test/: template.html
test/pages/: hmmmm.md  index.md
test/pages/n/e/s/t/e/: d.md  index.md
test/static/: main.css
