[package]
name = "nph-ssg"
version = "0.1.0"
authors = ["nph <carllegrone@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tiny static site generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
glob = "0.3.0"
pulldown-cmark = "0.8.0"
notify = "4.0.12"
